<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_margin="6dp"
        android:scrollbars="vertical"
        android:focusable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/canvas_title"/>

                    <TextView
                        android:id="@+id/textViewDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="10sp"
                        android:fontFamily="@font/nunito_sans"
                        android:layout_below="@id/textViewTitle"
                        android:text="@string/no_description"
                        android:textColor="#A9A9A9"/>



                    <TextView
                        android:id="@+id/textViewDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewDesc"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/delete"
                        android:paddingStart="8dp"
                        android:textColor="#BF1016"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                " />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>