<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screens.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomTab"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintVertical_bias="0"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/bottomTab"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="50dp"
                    android:id="@+id/profileImage"
                    android:textColor="@color/white"
                    android:padding="1dp"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    tools:text="TO"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:id="@+id/welcomeLayout"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toTopOf="@+id/profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textColor="@color/wellness_black"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/welcome2"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        tools:text="Opeyemi"
                        android:textStyle="bold"
                        android:textColor="@color/wellness_black"
                        android:textSize="18sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/howAreYouFeelingTexView"
                    android:textColor="@color/wellness_text_grey1"
                    android:textSize="15sp"
                    android:text="@string/how_are_you_feeling_today"
                    app:layout_constraintTop_toBottomOf="@+id/welcomeLayout"
                    app:layout_constraintStart_toStartOf="@+id/welcomeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/coveredLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/you_not_covered_card"
                    android:elevation="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/profileImage"
                    tools:layout_editor_absoluteX="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:src="@drawable/covered_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="25dp"
                        android:text="Your last login was at "
                        android:textColor="@color/wellness_black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/homepage_card"
                    android:elevation="2dp"
                    android:layout_marginTop="28dp"
                    android:id="@+id/planLayout"
                    app:layout_constraintTop_toBottomOf="@+id/coveredLayout"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/hospitalIcon"
                        android:src="@drawable/plan_image"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="17dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_height="wrap_content"/>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="21dp"
                        android:id="@+id/hospitalsBackIcon"
                        android:src="@drawable/vector_one"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="21dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:layout_width="0dp"
                        android:id="@+id/hospitalsTextView"
                        app:layout_constraintStart_toEndOf="@+id/hospitalIcon"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="11dp"
                        android:textSize="16sp"
                        android:textColor="@color/wellness_black"
                        android:text="Create a new sketch"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintEnd_toStartOf="@+id/hospitalsBackIcon"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="0dp"
                        app:layout_constraintStart_toStartOf="@id/hospitalsTextView"
                        app:layout_constraintEnd_toStartOf="@id/hospitalsBackIcon"
                        app:layout_constraintHorizontal_bias="0"
                        android:textColor="@color/wellness_grey_2"
                        android:layout_marginEnd="30dp"
                        android:textSize="13sp"
                        android:text="begin working on a new design or drawing"
                        app:layout_constraintTop_toBottomOf="@id/hospitalsTextView"
                        android:layout_marginBottom="21dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/recents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="Recent Sketches"
                    android:textColor="@color/wellness_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/coveredLayout"
                    app:layout_constraintTop_toBottomOf="@+id/planLayout" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selfServiceRecyclerView"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/recents"
                    app:layout_constraintStart_toStartOf="@+id/recents"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:listitem="@layout/item_sketches"
                    tools:itemCount="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>






        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/plus_ic"
            app:layout_constraintBottom_toTopOf="@id/bottomTab"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/bottomTab"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/tab_card"
            android:elevation="2dp"
            android:layout_width="match_parent">

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:icon="@drawable/nav_home"
                android:id="@+id/homeTab"
                android:layout_width="wrap_content"
                android:text="@string/home"/>

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:icon="@drawable/nav_explore"
                android:id="@+id/exploreTab"
                android:layout_width="wrap_content"
                android:text="SKETCHES"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_height="wrap_content"
                android:id="@+id/profileTab"
                android:icon="@drawable/nav_profile"
                android:layout_width="wrap_content"
                android:text="@string/profile"
                />

        </com.google.android.material.tabs.TabLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>